--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   image_picker: ^0.8.7+4
   flutter_responsive_screen: ^1.0.0
   flutter_screenutil: ^5.7.0
+  concentric_transition: ^1.0.3
+  lottie: ^2.3.2
+  page_transition: ^2.0.9
+  get: ^4.6.5
+  shared_preferences: ^2.1.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/animation/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
